# local-rag-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.corporate.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0c24de4e0ce7_initial_schema.py  a2b3c4d5e6f7_add_refresh_token_to_tenants.py  b7c3a1f2e8d4_add_content_hash_to_documents.py  c9d4e5f6a7b8_add_hnsw_index_on_embedding.py  d1e2f3a4b5c6_add_chat_tables.py  e2f3a4b5c6d7_add_password_hash_to_tenants.py  f3a4b5c6d7e8_add_entities_to_documents.py
app/: config.py  dependencies.py  main.py  metrics.py
app/api/v1/: auth.py  chat.py  documents.py  models.py  query.py
app/db/: models.py  session.py
app/schemas/: auth.py  chat.py  documents.py  query.py
app/services/: auth.py  chunking.py  embedding.py  extraction.py  ner.py  ollama.py  rate_limit.py
data/sample_documents/: README.md  postgresql-wikipedia.txt  rag-transformer-highlights.txt  world-health-organization.txt
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: provider.yml  rag_api.json
ollama/: Modelfile
tests/: conftest.py  test_auth.py  test_chat.py  test_chunking.py  test_db.py  test_documents.py  test_embedding.py  test_extraction.py  test_health.py  test_metrics.py  test_ner.py  test_ollama.py  test_query.py  test_rate_limit.py
ui/: Dockerfile  app.py
